<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/ic_gps"
            android:title="@string/nav_gps" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_service"
            android:title="@string/nav_services" />
        <item
            android:id="@+id/nav_terminal"
            android:icon="@drawable/ic_terminal"
            android:title="@string/nav_terminal" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>

</menu>
